--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         font-variation-settings: "wdth" 100;
         font-size: 16px;
         width: 960px;
+        margin: auto;
       }
 
       h1 {
@@ -23,6 +24,8 @@
         font-weight: 500;
         font-style: normal;
         text-align: center;
+        font-size: 20px;
+        padding: 0 15%;
       }
 
       ul {
@@ -47,7 +50,9 @@
         font-weight: bold;
       }
 
-      #site-title {}
+      #site-title {
+        font-size: 50px;
+      }
 
       nav {
         font-family: "Raleway", sans-serif;
@@ -63,9 +68,11 @@
       .container {
         display: grid;
         grid-template-columns: 50% 50%;
-        margin: 0 auto;
+        margin: auto;
+        margin-bottom: 10px;
         gap: 40px;
         width: 800px
+        
       }
 
       .grid-item {
@@ -85,8 +92,12 @@
       }
       
       footer {
-        padding: 20px;
+        color: white;
+        background-color: #395174;
+        padding: 10px;
+        margin: auto;
         text-align: center;
+        width: 80%;
       }
     </style>
 
