--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<!--Created by Danielle Berry , October 22 2025-->
+<html lang="en-ca">
   <head>
     <title>Exercise 7: Banh Mi, menus, and layout</title>
     <!-- This is embed code for Google fonts, take a look at  https://fonts.google.com/ for more info, you can just pick fonts and get an embed code which you use here. See how I am controlling them from <style> most of the CSS is just pasted in from Google and I have made tweaks to the weights and added other bits. This is what we will learn next week.-->
@@ -25,7 +26,8 @@
         font-style: normal;
         text-align: center;
         font-size: 20px;
-        padding: 0 15%;
+        padding: 0 10%;
+        margin-bottom: 30px;
       }
 
       ul {
@@ -52,6 +54,7 @@
 
       #site-title {
         font-size: 50px;
+        margin: auto;
       }
 
       nav {
